panorama: fix positioning on too large dashboards

--- a/plugins/plugins-available/panorama/root/panorama-1.88-2.css
+++ b/plugins/plugins-available/panorama/root/panorama-1.88-2.css
@@ -376,11 +376,6 @@ TD.less_padding DIV.x-grid-cell-inner {
   padding: 3px;
 }
 
-.x-viewport, .x-viewport body {
-  overflow-x: auto;
-  overflow-y: hidden;
-}
-
 DIV.x-window-default.gearopen {
   background-color: #E8E8E8;
 }
